--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="arrow-up"><a href="#"><i class="fas fa-angle-double-up fa-2x"></i></a></div>
          <div class="social-media">
         <ul>
-            <li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
+            <li><a href="https://github.com/yuvasreekandru"><i class="fab fa-github fa-2x"></i></a></li>
             <li><a href=""><i class="fab fa-instagram fa-2x"></i></a></li>
             <li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
             <li><a href=""><i class="fab fa-linkedin-in fa-2x"></i></a></li>
