--- a/index.html
+++ b/index.html
@@ -106,66 +106,52 @@
     <p class="text-dark para my-4 w-100">Here are a few design projects I've worked on recently. Want to see more?<a href="#contact">Email me.</a></p>
     <div class="container my-5">
         <div class="row p-row m-4">
-            <div class="col-lg-4 col-md-6 mb-1 p-2">
+            <div class="col-lg-6 col-md-6 mb-1 p-2">
                 <div class="card " id="p-card">
                     <div class="overlay-text">
                         <h2>Project</h2>
                         <p>Basic Website</p>
+                        <a href="https://yuvasreekandru.github.io/basic-website/" class="text-light">Click Here</a>
                     </div>
-                    <img class="p-img"src="images/bw.jpg" alt="">
+                     <img class="p-img"src="images/bw.png" alt="">
                 </div>
             </div>  
-            <div class="col-lg-4 col-md-6 mb-1 p-2">
+            <div class="col-lg-6 col-md-6 mb-1 p-2">
                 <div class="card" id="p-card">
                     <div class="overlay-text">
                         <h2>Project</h2>
                         <p>Cofee Shop Website</p>
+                        <a href="https://yuvasreekandru.github.io/coffee-shop/" class="text-light">Click Here</a>
                     </div>
-                    <img class="p-img" src="images/cf.jpg" alt="">
+                    <img class="p-img" src="images/coffee.png" alt="">
                 </div>
             </div>  
-            <div class="col-lg-4 col-md-6 mb-1 p-2">
+            <div class="col-lg-6 col-md-6 mb-1 p-2">
                 <div class="card "id="p-card">
                     <div class="overlay-text">
                         <h2>Project</h2>
                         <p>e-commerce Website</p>
+                        <a href="https://yuvasreekandru.github.io/e-commerce/" class="text-light">Click Here</a>
                     </div>
-                    <img class="p-img" src="images/e-comm.jpg" alt="">
+                    <img class="p-img" src="images/clothing.png" alt="">
                 </div>
             </div>  
-            <div class="col-lg-4 col-md-6 mb-1 p-2">
-                <div class="card"id="p-card">
-                    <div class="overlay-text">
-                        <h2>Project</h2>
-                        <p>Restaurant Website</p>
-                    </div>
-                    <img class="p-img" src="images/r.jpg" alt="">
-                </div>
-            </div>  
-            <div class="col-lg-4 col-md-6 mb-1 p-2">
+            <div class="col-lg-6 col-md-6 mb-1 p-2">
                 <div class="card"id="p-card">
                     <div class="overlay-text">
                         <h2>Project</h2>
                         <p>Weather Website</p>
+                        <a href="https://yuvasreekandru.github.io/weather-app-js/" class="text-light">Click Here</a>
                     </div>
                     <img class="p-img" src="images/weather.png" alt="">
                 </div>
-            </div> 
-            <div class="col-lg-4 col-md-6 mb-1 p-2">
-                <div class="card"id="p-card">
-                    <div class="overlay-text">
-                        <h2>Project</h2>
-                        <p>e-commerce Website</p>
-                    </div>
-                    <img class="p-img" src="images/ecommerce.png" alt="">
-                </div>
-            </div>            
+            </div>
         </div>
     </div>
 </section>
 <!-- Contact -->
 <section class="contact"id="email">
-        <h2 class=" text-light  text-center">CONTACT ME </h2>
+        <h2 class=" text-light  text-center justify-content-center align-items-center">CONTACT ME </h2>
         <p class="text-center">Have a question or want to work together?</p>
         <div class="details">
         <ul>
@@ -195,8 +181,6 @@
          </div>
 
 </footer>
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
