--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <a href=""><i class="fas fa-phone-alt"></i></a> +965 5567080
             </li>
             <li>
-                <a href="mailto:mailto:kandruyuvasree@gmail.com"><i class="far fa-envelope"></i></a> kandruyuvasree@gmail.com
+                <a href="mailto:kandruyuvasree@gmail.com"><i class="far fa-envelope"></i></a> kandruyuvasree@gmail.com
             </li>
         </ul>
         </div>
