changed mobile num

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!-- Main section -->
     <header>
        <!-- name -->
-       <h1 class="name text-light text-center">Hello I'm <span style="color:#dd0470">Yuvasree Eswar.</span><br>
-        Front-End Web Devoloper.</h1>
+       <h1 class="name text-light text-center">Hello I'm <span style="color:#dd0470">Yuvasree</span><br>
+        Front-End Web Devoloper</h1>
     </header>   
     <!-- navbar -->
        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
@@ -55,7 +55,7 @@
 <!-- About section -->
     <section class="about py-5" id="about">
         <div class="a-heading">
-            <h2 class="text-center mt-5">About Me</h2>
+            <h3 class="text-center mt-5">About Me</h3>
         </div>
             <div class="row m-5 ">
                 <div class="col-lg-7 ">
@@ -66,44 +66,44 @@
                         <p class="text-dark">Below is a list of my current technical skills:</p>
                         <ul>
                             <li>
-                                <img src="images/html.png" alt="">
+                                <img src="images/html.png" alt="about-img1">
                             </li>
                             <li>
-                                <img src="images/css.png" alt="">
+                                <img src="images/css.png" alt="about-img2">
                             </li>
                             <li>
-                                <img src="images/boot.png" alt="">
+                                <img src="images/boot.png" alt="about-img3">
                             </li>
                             <li>
-                                <img src="images/react.png" alt="">
+                                <img src="images/react.png" alt="about-img4">
                             </li>
                             <li>
-                                <img src="images/node.jpg" alt="">
+                                <img src="images/node.jpg" alt="about-img5">
                             </li>
                             <li>
-                                <img src="images/ejs.jpg" alt="">
+                                <img src="images/ejs.jpg" alt="about-img6">
                             </li>
                             <li>
-                                <img src="images/mongo.png" alt="">
+                                <img src="images/mongo.png" alt="about-img7">
                             </li>
                             <li>
-                                <img src="images/mongoose.png" alt="">
+                                <img src="images/mongoose.png" alt="about-img8">
                             </li>
                             <li>
-                                <img src="images/git.png" alt="">
+                                <img src="images/git.png" alt="about-img9">
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-5 about-img">
-                    <img src="images/0.jpg" alt="">
+                    <img src="images/0.jpg" alt="about-main">
                 </div>
             </div>
     </section>
 <!-- Projects -->
 <section class="work py-5" id="work">
-    <h2 class="w-heading text-center">Projects</h2>
-    <p class="text-dark para my-4 w-100">Here are a few design projects I've worked on recently. Want to see more?<a href="#contact">Email me.</a></p>
+    <h3 class="w-heading text-center">My Work</h3>
+    <p class="text-dark para my-4 w-100">Here are a few design projects I've worked on recently. Want to see more?<a href="mailto:kandruyuvasree@gmail.com">Email me.</a></p>
     <div class="container my-5">
         <div class="row p-row m-4">
             <div class="col-lg-6 col-md-6 mb-1 p-2">
@@ -113,7 +113,7 @@
                         <p>Basic Website</p>
                         <a href="https://yuvasreekandru.github.io/basic-website/" class="text-light">Click Here</a>
                     </div>
-                     <img class="p-img"src="images/bw.png" alt="">
+                     <img class="p-img"src="images/bw.png" alt="basic-img">
                 </div>
             </div>  
             <div class="col-lg-6 col-md-6 mb-1 p-2">
@@ -123,7 +123,7 @@
                         <p>Cofee Shop Website</p>
                         <a href="https://yuvasreekandru.github.io/coffee-shop/" class="text-light">Click Here</a>
                     </div>
-                    <img class="p-img" src="images/coffee.png" alt="">
+                    <img class="p-img" src="images/coffee.png" alt="coffee-shop-img">
                 </div>
             </div>  
             <div class="col-lg-6 col-md-6 mb-1 p-2">
@@ -133,7 +133,7 @@
                         <p>e-commerce Website</p>
                         <a href="https://yuvasreekandru.github.io/e-commerce/" class="text-light">Click Here</a>
                     </div>
-                    <img class="p-img" src="images/clothing.png" alt="">
+                    <img class="p-img" src="images/clothing.png" alt="e-commerce-img">
                 </div>
             </div>  
             <div class="col-lg-6 col-md-6 mb-1 p-2">
@@ -143,7 +143,7 @@
                         <p>Weather Website</p>
                         <a href="https://yuvasreekandru.github.io/weather-app-js/" class="text-light">Click Here</a>
                     </div>
-                    <img class="p-img" src="images/weather.png" alt="">
+                    <img class="p-img" src="images/weather.png" alt="weather-img">
                 </div>
             </div>
         </div>
@@ -151,7 +151,7 @@
 </section>
 <!-- Contact -->
 <section class="contact"id="email">
-        <h2 class=" text-light  text-center justify-content-center align-items-center">CONTACT ME </h2>
+        <h2 class="contact-heading text-light  text-center justify-content-center align-items-center">Contact Me </h2>
         <p class="text-center">Have a question or want to work together?</p>
         <div class="details">
         <ul>
